# block_sparse

./: .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py  test_binding.py  utils.py
include/: matmul.h  tensor.h
src/: bindings.cpp  matmul.cpp  sparse_micro_kernel.s  tensor.cpp
wheels/: block_sparse-0.1.0-cp310-cp310-linux_aarch64.whl  block_sparse-0.1.0-cp38-cp38-linux_aarch64.whl  block_sparse-0.1.0-cp39-cp39-linux_aarch64.whl
